# Jarvis

./: INSTALL.md  README.md  install.sh  requirements.txt  start.sh
src/: jarvis.py
ui/: package.json
ui/src/: index.html
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/src/: lib.rs
